--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -79,8 +79,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u79-lC-9dF">
-                                <rect key="frame" x="54" y="454" width="212" height="34"/>
-                                <color key="backgroundColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
+                                <rect key="frame" x="54" y="452" width="212" height="36"/>
+                                <color key="backgroundColor" red="0.23137254901960785" green="0.34901960784313724" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <state key="normal" title="Continue">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -313,7 +314,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="stc-V3-aNT">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="stc-V3-aNT">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
@@ -321,7 +322,7 @@
                                         <rect key="frame" x="0.0" y="55.5" width="320" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lix-y0-FbI" id="B09-VV-DAz">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hTf-af-r42">
@@ -373,11 +374,11 @@
                                         <rect key="frame" x="0.0" y="155.5" width="320" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OBH-uH-Jx5" id="3tb-rS-8wU">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ntc-Fg-cSL">
-                                                    <rect key="frame" x="264" y="11.5" width="51" height="27"/>
+                                                    <rect key="frame" x="259" y="11.5" width="51" height="27"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <state key="normal" title="See All &gt;">
                                                         <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -387,11 +388,11 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wKs-OA-IoV">
-                                                    <rect key="frame" x="15" y="14" width="150" height="21"/>
+                                                    <rect key="frame" x="15" y="12.5" width="150" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="OLR-nP-Hrs"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -402,7 +403,7 @@
                                                 <constraint firstItem="ntc-Fg-cSL" firstAttribute="centerY" secondItem="3tb-rS-8wU" secondAttribute="centerY" id="Agq-6J-abe"/>
                                                 <constraint firstItem="ntc-Fg-cSL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="3tb-rS-8wU" secondAttribute="leading" constant="20" symbolic="YES" id="Gc3-oo-jk4"/>
                                                 <constraint firstItem="wKs-OA-IoV" firstAttribute="leading" secondItem="3tb-rS-8wU" secondAttribute="leadingMargin" id="KWb-Ao-qDo"/>
-                                                <constraint firstAttribute="trailing" secondItem="ntc-Fg-cSL" secondAttribute="trailing" constant="5" id="ql5-4G-uu1"/>
+                                                <constraint firstAttribute="trailing" secondItem="ntc-Fg-cSL" secondAttribute="trailing" constant="10" id="ql5-4G-uu1"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -466,7 +467,7 @@
                                 </textAttributes>
                                 <items>
                                     <navigationItem title="Favourites" id="f8b-nR-Szw">
-                                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="done" id="Lbu-gX-mVM">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="stop" id="Lbu-gX-mVM">
                                             <color key="tintColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
                                         </barButtonItem>
                                     </navigationItem>
@@ -522,7 +523,7 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <items>
                                     <navigationItem title="Developers" id="8Pe-Ur-LrQ">
-                                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="done" id="m6K-CU-M3j">
+                                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="stop" id="m6K-CU-M3j">
                                             <color key="tintColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
                                             <connections>
                                                 <action selector="doneButtonClicked:" destination="4hj-be-veB" id="O6G-6i-Ujf"/>
@@ -755,7 +756,7 @@
                                 </textAttributes>
                                 <items>
                                     <navigationItem title="About Revels" id="eLM-BB-ogg">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="9Vg-8i-2gP">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="stop" id="9Vg-8i-2gP">
                                             <color key="tintColor" name="systemPinkColor" catalog="System" colorSpace="catalog"/>
                                             <connections>
                                                 <action selector="doneButtonClicked:" destination="GtM-7r-lSC" id="gnT-9F-Zc9"/>
@@ -802,6 +803,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
