--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -335,7 +335,7 @@
                     <viewLayoutGuide key="safeArea" id="t20-aa-KQk"/>
                 </view>
             </objects>
-            <point key="canvasLocation" x="3061.875" y="-144.71830985915494"/>
+            <point key="canvasLocation" x="3060" y="-73"/>
         </scene>
         <!--Home Page-->
         <scene sceneID="PZ2-su-UOz">
@@ -467,6 +467,9 @@
                             </barButtonItem>
                             <barButtonItem image="Favorites" id="gps-tI-h9k">
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="favoriteButtonSelected:" destination="MEb-MX-0xR" id="hLf-4l-VLQ"/>
+                                </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
@@ -499,36 +502,30 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4qJ-lY-iT8">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AXw-Eg-5fZ">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yAr-8T-sX3">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FavouritesCell" id="jFq-Va-8sM">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="kPD-fh-ddz">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kPD-fh-ddz" id="qTe-lc-aFF">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="4qJ-lY-iT8" firstAttribute="leading" secondItem="gCc-t3-o6n" secondAttribute="leading" id="3dU-jD-AfN"/>
                             <constraint firstItem="kAP-hP-n4z" firstAttribute="top" secondItem="gCc-t3-o6n" secondAttribute="top" id="41S-md-eJc"/>
-                            <constraint firstItem="4qJ-lY-iT8" firstAttribute="trailing" secondItem="gCc-t3-o6n" secondAttribute="trailing" id="DMn-oC-d5N"/>
                             <constraint firstItem="kAP-hP-n4z" firstAttribute="leading" secondItem="gCc-t3-o6n" secondAttribute="leading" id="Ne6-YK-Z28"/>
+                            <constraint firstItem="AXw-Eg-5fZ" firstAttribute="bottom" secondItem="gCc-t3-o6n" secondAttribute="bottom" id="QQI-5p-Och"/>
                             <constraint firstItem="kAP-hP-n4z" firstAttribute="trailing" secondItem="gCc-t3-o6n" secondAttribute="trailing" id="hGt-G3-P3i"/>
-                            <constraint firstItem="4qJ-lY-iT8" firstAttribute="bottom" secondItem="gCc-t3-o6n" secondAttribute="bottom" id="mbF-x3-ITV"/>
-                            <constraint firstItem="4qJ-lY-iT8" firstAttribute="top" secondItem="kAP-hP-n4z" secondAttribute="bottom" id="xhK-Ml-rtW"/>
+                            <constraint firstItem="AXw-Eg-5fZ" firstAttribute="top" secondItem="kAP-hP-n4z" secondAttribute="bottom" id="hQ3-mp-cHG"/>
+                            <constraint firstItem="AXw-Eg-5fZ" firstAttribute="trailing" secondItem="gCc-t3-o6n" secondAttribute="trailing" id="qVl-WU-MzY"/>
+                            <constraint firstItem="AXw-Eg-5fZ" firstAttribute="leading" secondItem="gCc-t3-o6n" secondAttribute="leading" id="yWr-5W-qEh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gCc-t3-o6n"/>
                     </view>
@@ -904,7 +901,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sZy-Ks-BWP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2014" y="-144"/>
+            <point key="canvasLocation" x="2014" y="-73"/>
         </scene>
         <!--Categories-->
         <scene sceneID="caB-7J-wt6">
