--- a/Revels'18/NIB Files/InstaCell.xib
+++ b/Revels'18/NIB Files/InstaCell.xib
@@ -18,21 +18,21 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="fU0-0F-oiF">
-                    <rect key="frame" x="5" y="20" width="365" height="647"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="hsA-Ob-Xer">
-                            <rect key="frame" x="0.0" y="0.0" width="300" height="98.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="300" height="64"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0hr-iK-qxT">
-                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="80" id="Hr6-xb-GQI"/>
-                                        <constraint firstAttribute="height" constant="80" id="WLe-1M-l7J"/>
+                                        <constraint firstAttribute="width" constant="50" id="Hr6-xb-GQI"/>
+                                        <constraint firstAttribute="height" constant="50" id="WLe-1M-l7J"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="llW-6J-9iy">
-                                    <rect key="frame" x="85" y="0.0" width="215" height="20.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <rect key="frame" x="55" y="0.0" width="245" height="18"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -42,13 +42,13 @@
                             </constraints>
                         </stackView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RCT-Bc-Yxz">
-                            <rect key="frame" x="0.0" y="98.5" width="365" height="365"/>
+                            <rect key="frame" x="0.0" y="64" width="375" height="375"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="RCT-Bc-Yxz" secondAttribute="height" multiplier="1:1" id="CRC-nf-rv0"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCL-FT-Rsf">
-                            <rect key="frame" x="0.0" y="463.5" width="365" height="123.5"/>
+                            <rect key="frame" x="0.0" y="439" width="375" height="148"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -57,15 +57,23 @@
                             <rect key="frame" x="0.0" y="587" width="200" height="60"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CbU-8J-Dgx">
-                                    <rect key="frame" x="0.0" y="0.0" width="94" height="60"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="30" height="60"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJ1-u6-xyw">
-                                            <rect key="frame" x="0.0" y="0.0" width="94" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJ1-u6-xyw">
+                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="LAZ-iY-d2J"/>
+                                                <constraint firstAttribute="height" constant="30" id="yL2-sC-i3e"/>
+                                            </constraints>
+                                            <state key="normal" title="Button" image="BlurFavorites"/>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gOq-94-bEb">
-                                            <rect key="frame" x="0.0" y="30" width="94" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gOq-94-bEb">
+                                            <rect key="frame" x="0.0" y="30" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="BrJ-aN-6JO"/>
+                                                <constraint firstAttribute="width" constant="30" id="OZc-tX-8oG"/>
+                                            </constraints>
+                                            <state key="normal" title="Button" image="Comments"/>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -73,16 +81,16 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="FXe-hB-N67">
-                                    <rect key="frame" x="104" y="0.0" width="96" height="60"/>
+                                    <rect key="frame" x="40" y="0.0" width="160" height="60"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cP-fp-LB2">
-                                            <rect key="frame" x="0.0" y="0.0" width="96" height="30"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAd-uV-qDl">
-                                            <rect key="frame" x="0.0" y="30" width="96" height="30"/>
+                                            <rect key="frame" x="0.0" y="30" width="160" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -99,6 +107,7 @@
                         </stackView>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="hsA-Ob-Xer" firstAttribute="leading" secondItem="fU0-0F-oiF" secondAttribute="leading" id="1Wr-EX-7qs"/>
                         <constraint firstItem="zCL-FT-Rsf" firstAttribute="width" secondItem="RCT-Bc-Yxz" secondAttribute="width" id="m9a-wv-eBc"/>
                     </constraints>
                 </stackView>
@@ -106,12 +115,16 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="fU0-0F-oiF" secondAttribute="bottom" id="N8W-qS-g62"/>
-                <constraint firstItem="fU0-0F-oiF" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="5" id="NIY-5J-8H1"/>
-                <constraint firstAttribute="trailing" secondItem="fU0-0F-oiF" secondAttribute="trailing" constant="5" id="aBE-IU-wdA"/>
+                <constraint firstItem="fU0-0F-oiF" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="NIY-5J-8H1"/>
+                <constraint firstAttribute="trailing" secondItem="fU0-0F-oiF" secondAttribute="trailing" id="aBE-IU-wdA"/>
                 <constraint firstItem="fU0-0F-oiF" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ufc-hD-eEO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="BlurFavorites" width="120" height="120"/>
+        <image name="Comments" width="60" height="60"/>
+    </resources>
 </document>
