--- a/Revels'18/NIB Files/InstaCell.xib
+++ b/Revels'18/NIB Files/InstaCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="InstagramCell" customModule="Revels_18" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UITableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -21,7 +21,7 @@
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="hsA-Ob-Xer">
-                            <rect key="frame" x="0.0" y="0.0" width="300" height="64"/>
+                            <rect key="frame" x="0.0" y="0.0" width="300" height="212"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0hr-iK-qxT">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -42,17 +42,11 @@
                             </constraints>
                         </stackView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RCT-Bc-Yxz">
-                            <rect key="frame" x="0.0" y="64" width="375" height="375"/>
+                            <rect key="frame" x="0.0" y="212" width="375" height="375"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="RCT-Bc-Yxz" secondAttribute="height" multiplier="1:1" id="CRC-nf-rv0"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCL-FT-Rsf">
-                            <rect key="frame" x="0.0" y="439" width="375" height="148"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Gmf-Yr-DBH">
                             <rect key="frame" x="0.0" y="587" width="200" height="60"/>
                             <subviews>
@@ -108,7 +102,6 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="hsA-Ob-Xer" firstAttribute="leading" secondItem="fU0-0F-oiF" secondAttribute="leading" id="1Wr-EX-7qs"/>
-                        <constraint firstItem="zCL-FT-Rsf" firstAttribute="width" secondItem="RCT-Bc-Yxz" secondAttribute="width" id="m9a-wv-eBc"/>
                     </constraints>
                 </stackView>
             </subviews>
